--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html> <html ng-app="marcelinhaApp"> <head> <meta charset="utf-8"> <title ng-bind="appTitle"></title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.151a0907.css"> <link rel="stylesheet" href="styles/main.fc14bea4.css"> </head> <body> <!--[if lte IE 8]>
+<!doctype html> <html ng-app="marcelinhaApp"> <head> <meta charset="utf-8"> <title ng-bind="appTitle"></title> <meta http-equiv="refresh" content="0; url=https://eventoscase.blob.core.windows.net/2019-05-brf-clube-de-experiencias-reminder/livretoBRF_email_maio.pdf"> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.151a0907.css"> <link rel="stylesheet" href="styles/main.fc14bea4.css"> </head> <body> <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]--> <ui-view></ui-view> <!-- Google Analytics: change UA-XXXXX-X to be your site's ID --> <script>!function (A, n, g, u, l, a, r) {
     A.GoogleAnalyticsObject = l, A[l] = A[l] || function () {
@@ -8,4 +8,4 @@
     }(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-XXXXX-X');
-    ga('send', 'pageview');</script> <script src="scripts/vendor.c249d1f1.js"></script> <script src="scripts/scripts.e9eb2fdd.js"></script> </body> </html>
+    ga('send', 'pageview');</script> <script src="scripts/vendor.ba3128f0.js"></script> <script src="scripts/scripts.e9eb2fdd.js"></script> </body> </html>
